--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -2,8 +2,11 @@
 PORT=5000
 NODE_ENV=development
 
-# Database
-MONGO_URI=mongodb+srv://user:pass@cluster0.mongodb.net/mob-pizza
+# Database - Local MongoDB for development
+MONGO_URI=mongodb://localhost:27017/mob-pizza
+
+# For production (MongoDB Atlas):
+# MONGO_URI=mongodb+srv://user:pass@cluster0.mongodb.net/mob-pizza
 
 # Auth
 JWT_SECRET=change-me
