--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node server.js",
     "start": "NODE_ENV=production node server.js",
+    "seed": "node src/seeders/index.js",
     "lint": "echo \"add linter\""
   },
   "dependencies": {
