--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  provider: ^6.1.1
   go_router: ^14.0.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
@@ -23,4 +27,5 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+  generate: true
 
