--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
@@ -18,4 +21,3 @@
     "vite": "^5.2.0"
   }
 }
-
