--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   go_router: ^14.0.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
+  http: ^1.2.2
+  shared_preferences: ^2.2.2
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
