shifted from local storage to mongodb storage

--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -2,11 +2,11 @@
 PORT=5000
 NODE_ENV=development
 
-# Database - Local MongoDB for development
-MONGO_URI=mongodb://localhost:27017/mob-pizza
+# Database - MongoDB Atlas (Production)
+MONGO_URI=mongodb+srv://Ayman:Ayman2004@cluster0.ax0nlid.mongodb.net/mob-pizza?retryWrites=true&w=majority
 
-# For production (MongoDB Atlas):
-# MONGO_URI=mongodb+srv://user:pass@cluster0.mongodb.net/mob-pizza
+# For local development:
+# MONGO_URI=mongodb://localhost:27017/mob-pizza
 
 # Auth
 JWT_SECRET=change-me
