--- a/apps/mobile/env.example
+++ b/apps/mobile/env.example
@@ -1,4 +1,8 @@
-API_BASE_URL=http://10.0.2.2:5000/api/v1
+# Production (default)
+API_BASE_URL=https://mob-pizza.onrender.com/api/v1
+
+# For local development, uncomment and use:
+# API_BASE_URL=http://10.0.2.2:5000/api/v1
 GOOGLE_MAPS_API_KEY=your_maps_key
 RESEND_API_KEY=your_resend_api_key
 R2_PUBLIC_BUCKET_URL=https://<r2-cname>/mob-pizza-assets
