--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.2.2
   permission_handler: ^11.3.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
