--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -27,6 +27,10 @@ R2_PUBLIC_BUCKET_URL=https://<r2-cname>/mob-pizza-assets
 RAZORPAY_KEY_ID=your_key_id
 RAZORPAY_KEY_SECRET=your_key_secret
 
+# Stripe
+STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key
+STRIPE_SECRET_KEY=sk_test_your_secret_key
+
 # Maps
 GOOGLE_MAPS_API_KEY=your_maps_key
 
