--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.2.2
   permission_handler: ^11.3.0
   google_sign_in: ^6.2.1
+  flutter_stripe: ^11.1.0
 
 dev_dependencies:
   flutter_test:
